# osm-waypoints

./: .gitignore  .pre-commit-config.yaml  Brewfile  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
scripts/: config.py  describe_pois.py  export_gpx.py  extract_osm.py  extract_pois.py  garmin_symbols.py  gpx_utils.py  ollama_client.py  osm_context.py  poi_rules.py  render_map.py  text_utils.py  validate_pois.py
tests/: test_config.py  test_describe_pois.py  test_export_gpx.py  test_extract_osm.py  test_extract_pois.py  test_garmin_symbols.py  test_gpx_utils.py  test_ollama_client.py  test_osm_context.py  test_poi_rules.py  test_render_map.py  test_text_utils.py  test_validate_pois.py
